--- a/css/style-create-login.css
+++ b/css/style-create-login.css
@@ -48,3 +48,10 @@ input.form-control:focus {
 .offcanvas a{
     text-decoration: none;
 }
+
+.img-fluid{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    justify-content: center;
+}
