--- a/css/style-login.css
+++ b/css/style-login.css
@@ -23,10 +23,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    margin-top: auto;
     padding-top: 8%;
-}
 
+}
 
 .container-imagem:hover img {
     transform: scale(1.1);
