--- a/css/style-create-login.css
+++ b/css/style-create-login.css
@@ -13,9 +13,7 @@ body {
     background-color: var(--second-bg-color);
     color: var(--text-color);
     font-family: 'Poppins', sans-serif;
-    margin-left: 25%;
-    margin-right: 25%;
-    margin-top: 5%;
+    background-position: center;
 }
 
 .form-text{
@@ -54,4 +52,47 @@ input.form-control:focus {
     height: 50px;
     cursor: pointer;
     justify-content: center;
+}
+
+.bg-body-tertiary{
+    background-color: var(--bg-color) !important;
+    box-shadow: 0px 2px black;
+}
+
+.navbar-brand{
+    color: var(--text-color) !important;
+    font-weight: bold;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 2px 2px 3px black;
+    font-size: 25px;
+    padding: 0;
+    margin: 0;
+
+}
+
+.navbar-brand:hover{
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.custom-dropdown-menu[data-bs-popper] {
+    top: 100%;
+    margin-top: var(--bs-dropdown-spacer);
+    right: 0%;
+    left: auto;
+    background-color: var(--second-color);
+    border: 1px solid var(--text-color);
+}
+
+.dropdown-item{
+    color: var(--text-color);
+}
+
+.dropdown-toggle{
+    color: var(--text-color);
+}
+
+.mt-5{
+    margin-top: 7rem !important;
+    margin-bottom: 7rem !important;
 }
